refato para render-PT2
