# index.js
@@ -14,14 +14,15 @@ app.use(express.json());
 const port = process.env.PORT || 3000;
 app.listen(port, () => console.log(`Servidor rodando na porta ${port}`));
 
-app.use("/createnova", routerNews);
-app.use("/feednews", routerNews);
-app.use("/news", routerNews);
+
+app.use("/doc", routerSwagger);
+app.use("/auth", routerAuth);
+
+app.use("/create", router);
 
 app.use("/create", router);
 app.use("/findall", router);
-app.use("/", router);
 
-app.use("/auth", routerAuth);
-
-app.use("/doc", routerSwagger);
+app.use("/createnova", routerNews);
+app.use("/feednews", routerNews);
+app.use("/news", routerNews);
